--- a/Source/Quartzmin.RestApi/SPA/quartzmin-spa/src/index.html
+++ b/Source/Quartzmin.RestApi/SPA/quartzmin-spa/src/index.html
@@ -6,7 +6,16 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <link rel="icon" type="image/png" sizes="16x16"   href="assets/images/favicons/favicon-16.png">
+  <link rel="icon" type="image/png" sizes="24x24"   href="assets/images/favicons/favicon-24.png">
+  <link rel="icon" type="image/png" sizes="32x32"   href="assets/images/favicons/favicon-32.png">
+  <link rel="icon" type="image/png" sizes="48x48"   href="assets/images/favicons/favicon-48.png">
+  <link rel="icon" type="image/png" sizes="64x64"   href="assets/images/favicons/favicon-64.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="assets/images/favicons/favicon-192.png">
+  <link rel="icon" type="image/png" sizes="256x256" href="assets/images/favicons/favicon-256.png">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
